--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.8.4",
+    "eas-cli": "^16.2.1",
     "expo": "~51.0.28",
+    "expo-dev-client": "~4.0.29",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
