--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
     "eas-cli": "^16.2.1",
     "expo": "~51.0.28",
@@ -28,6 +29,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
+    "react-redux": "^9.2.0",
     "showdown": "^2.1.0"
   },
   "devDependencies": {
